force-app/main/default/objects/ssot__Device__dlm/fields/ssot__DeviceNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__DeviceNumber__c</fullName>
    <label>Device Number</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DeviceNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>