force-app/main/default/objects/ssot__Device__dlm/fields/ssot__DeviceTypeId__c.field-meta.xml
<CustomField>
    <fullName>ssot__DeviceTypeId__c</fullName>
    <label>Device Type</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DeviceTypeId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>