force-app/main/default/objects/ssot__Device__dlm/fields/ssot__DeviceUserSessions__c.field-meta.xml
<CustomField>
    <fullName>ssot__DeviceUserSessions__c</fullName>
    <label>DeviceUserSessions relationship</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DeviceUserSessions</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>