force-app/main/default/objects/ssot__Device__dlm/fields/ssot__OSVersionNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__OSVersionNumber__c</fullName>
    <label>OS Version</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>OSVersionNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>